--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3",
+    "axios": "^1.6.7",
+    "ethers": "^6.11.1",
+    "ipfs-http-client": "^60.0.1",
+    "next": "14.1.0",
     "react": "^18",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dropzone": "^14.2.3",
+    "web3modal": "^1.9.12"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "hardhat": "^2.20.1"
   }
 }
